[package]
name = "voter"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
data-encoding = "2.6.0"
hex = "0.4.3"
password-hash = "0.5.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
