[package]
name = "voter"
version = "0.1.1"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json"] }
base64 = "0.22.1"
chrono = "0.4.38"
envy = "0.4.2"
futures-util = "0.3.30"
serde = "1.0.204"
password-hash = "0.5.0"
serde_json = "1.0.120"
solana-account-decoder = "2.0.2"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
tokio = "1.38.0"
url = { version = "2.5.2", features = ["serde"] }
bs58 = "0.5.1"
sha2 = "0.10.8"
hex = "0.4.3"
rayon = "1.10.0"
clap = { version = "3.0", features = ["derive"] }
num_cpus = "1.16.0"
